# math-series

./: pyproject.toml
math_series/: series.py
tests/: test_math_series.py  test_series.py
