[tool.poetry]
name = "math-series"
version = "0.1.0"
description = ""
authors = ["Dario Thornhill <dario.thornhill@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
